appx: Use a different resource for the Properties DisplayName (#12337)
We have to do this so that the store sees us as one thing ("Windows
Terminal") and the Start menu sees us as another ("Terminal").

The store will reject our package if the value we use for "DisplayName"
here doesn't match the store's "reserved names".

This value is *not used* by the start menu.

--- a/src/cascadia/TerminalApp/Resources/en-US/ContextMenu.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/ContextMenu.resw
@@ -127,6 +127,16 @@
   <data name="AppNamePre" xml:space="preserve">
     <value>Terminal Preview</value>
   </data>
+  <data name="AppStoreName" xml:space="preserve">
+    <value>Windows Terminal</value>
+  </data>
+  <data name="AppStoreNameDev" xml:space="preserve">
+    <value>Windows Terminal Dev</value>
+    <comment>{Locked} The dev build will never be seen in multiple languages</comment>
+  </data>
+  <data name="AppStoreNamePre" xml:space="preserve">
+    <value>Windows Terminal Preview</value>
+  </data>
   <data name="AppShortName" xml:space="preserve">
     <value>Terminal</value>
   </data>
