--- a/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
@@ -729,6 +729,7 @@
     <comment>This is a call-to-action hyperlink; it will open the settings.</comment>
   </data>
   <data name="CommandPalette_MatchesAvailable" xml:space="preserve">
-    <value>Suggestions available</value>
+    <value>Suggestions found: {0}</value>
+    <comment>{0} will be replaced with a number.</comment>
   </data>
 </root>
